--- a/SolarSystem/Views/Home/Detail.cshtml
+++ b/SolarSystem/Views/Home/Detail.cshtml
@@ -7,7 +7,7 @@
  <div class="container planetinfo">
              <div class="row">
                 <button onclick="playAudio()">Audio</button>
-                <audio id="audioFile" src='@GetString("details."+@Model.Name+".audio")' control></audio>
+                <audio id="audioFile" src='../../@GetString("details."+@Model.Name+".audio")'></audio>
                 <script>
                     var playPause = true;
                     function playAudio(){
@@ -34,25 +34,10 @@
                     
                     <div class="detail-text">
                         <div class="detail-text-subtitle">
-                        <h3>The Sun</h3>
+                        <h3>@GetString("index."+@Model.Name)</h3>
                     </div>
                     <p>
-                        The Sun is a 4.5 billion-year-old star – a hot glowing ball of hydrogen and helium at the center of our solar system.
-                        The Sun is about 150 million kilometers from Earth, and without its energy, life as we know it could not exist here on our home planet.
-                    </p>
-                    <p>
-                        The Sun is the largest object in our solar system. The Sun’s volume would need 1.3 million Earths to fill it.
-                        Its gravity holds the solar system together, keeping everything from the biggest planets to the smallest bits of debris in orbit around it.
-                        The hottest part of the Sun is its core, where temperatures top 15 million degrees Celsius.
-                        The Sun’s activity, from its powerful eruptions to the steady stream of charged particles it sends out,
-                        influences the nature of space throughout the solar system.
-                    </p>
-
-                    <p>
-                        NASA and other international space agencies monitor the Sun 24/7 with a fleet of spacecraft,
-                        studying everything from its atmosphere to its surface, and even peering inside the Sun using special instruments.
-                        Sun-exploring spacecraft include Parker Solar Probe, Solar Orbiter, SOHO, ACE, IRIS, WIND, Hinode, Solar Dynamics Observatory,
-                        and STEREO.
+                       @GetString("details."+@Model.Name)
                     </p>
                 </div>
             </div>
